--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -16,33 +16,48 @@ header {
   width: 100%;
   padding: 1rem 20px;
   z-index: 10;
-}
-
-header::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
   background: transparent;
-  transition: 400ms;
-  z-index: -1;
+  transition: 400ms ease;
 }
 
-header.sticky::before {
+header.sticky {
   background: var(--background-navbar);
-  height: 100%;
+  box-shadow: rgba(0, 0, 0, 0.15) 0 4px 3px;
+}
+
+header.sticky .name, 
+header.sticky .navlinks .navlinks__link{
+  color: var(--color-secondary);
+}
+
+header.sticky .navlinks .navlinks__link::before{
+  background: var(--color-secondary);
+}
+
+header.sticky .btn__contact{
+  background: #069ecc;
+  border: 1px solid #069ecc;
+  color: #fff !important;
+}
+
+header.sticky .btn__contact:hover{
+  color: var(--color-secondary) !important;
+}
+
+header.sticky .burger{
+  color: var(--color-secondary);
 }
 
 header nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-  transition: 0.2s ease-in;
+  transition: .2s ease-in;
 }
 
-header .name{
+header nav .name{
+  display: flex;
+  flex: 1;
   color: var(--color-primary);
   font-family: var(--font-play);
   font-weight: 400;
@@ -54,7 +69,7 @@ header nav .navlinks {
   gap: 30px;
 }
 
-header nav .navlinks a {
+header nav .navlinks .navlinks__link {
   position: relative;
   display: flex;
   align-items: center;
@@ -65,7 +80,7 @@ header nav .navlinks a {
   font-size: 1em;
 }
 
-header nav .navlinks a::before {
+header nav .navlinks .navlinks__link::before {
   content: "";
   position: absolute;
   top: 100%;
@@ -77,13 +92,33 @@ header nav .navlinks a::before {
   transition: 0.5s;
 }
 
-header nav .navlinks a:is(.active, :hover)::before {
+header nav .navlinks .navlinks__link:is(.active, :hover)::before {
   scale: 1;
 }
 
 header nav .navlinks a svg {
   width: 18px;
   height: 18px;
+}
+
+header nav .navlinks .contact__menu{
+  display: none;
+}
+
+header nav .btn__contact{
+  border: 1px solid var(--color-primary);
+  background: var(--color-primary);
+  padding: 5px 20px;
+  border-radius: 50px;
+  color: var(--color-secondary) !important;
+  font-family: var(--font-secondary);
+  font-weight: 400;
+  transition: 400ms ease;
+}
+
+header nav .btn__contact:hover{
+  background: transparent;
+  color: var(--color-primary) !important;
 }
 
 .burger, .close-menu{
@@ -200,7 +235,7 @@ header nav .navlinks a svg {
 }
 
 .buttons a:nth-child(1){
-  background: linear-gradient(to left, #0061ff, #03b2c5);
+  background: linear-gradient(to left, #f4119e, #f0073b);
   color: var(--color-primary);
   border: none;
 }
@@ -211,7 +246,7 @@ header nav .navlinks a svg {
 }
 
 .buttons :is(a:nth-child(1)):hover{
-  background: linear-gradient(to right, #0061ff, #03b2c5);
+  background: linear-gradient(to right, #f4119e, #f0073b);
   color: var(--color-primary);
 }
 
@@ -252,10 +287,21 @@ header nav .navlinks a svg {
 }
 
 .about-content h2 {
+  position: relative;
   color: var(--color-primary);
   font-size: 2.8rem;
   font-weight: 400;
   margin-bottom: 20px;
+}
+
+.about-content h2::before{
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 15%;
+  height: 2px;
+  background: var(--color-primary);
 }
 
 .about-content p {
@@ -281,35 +327,44 @@ header nav .navlinks a svg {
 }
 
 .skills {
-  background: var(--background-skills);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background: var(--background-skills);
   min-height: var(--min-height);
-  padding: 100px;
+  padding: 30px 0 30px;
+  padding-top: 50px;
 }
 
 .skills .skills__title {
+  position: relative;
   color: var(--color-titles);
   font-family: var(--font-secondary);
   font-weight: 500;
   font-size: 2rem;
   text-align: center;
-  padding-bottom: 5rem;
 }
 
-.skills .skills__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+.skills .skills__title::before{
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 6px);
+  background: #19485f;
+  width: 50%;
+  height: 2px;
+}
+
+.skills .skills__container{
   width: 100%;
-  max-width: 850px;
+  max-width: 950px;
   margin: 0 auto;
+  margin-top: 5rem;
 }
 
-.skill__wrapper,
-.course__box {
+.skill__wrapper{
   font-family: var(--font-play);
   text-align: center;
 }
@@ -318,6 +373,7 @@ header nav .navlinks a svg {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
@@ -327,8 +383,9 @@ header nav .navlinks a svg {
   align-items: center;
   flex-direction: column;
   gap: 1rem;
-  background: var(--background-skill-course);
-  width: 130px;
+  background: var(--background-card-skill);
+  width: 145px;
+  height: 120px;
   padding: 1rem;
   border-radius: 10px;
   margin-bottom: 2rem;
@@ -342,7 +399,7 @@ header nav .navlinks a svg {
 .skill svg{
   width: 50px;
   height: 50px;
-  color: #eee;
+  color: #fff;
 }
 
 .skill .title__skill{
@@ -357,42 +414,6 @@ header nav .navlinks a svg {
   font-size: 1.5rem;
   margin-bottom: 20px;
   font-weight: 400;
-}
-
-.course__box .course__box__title {
-  position: relative;
-  color: var(--color-titles);
-  font-weight: 400;
-  margin-bottom: 25px;
-}
-
-.course__box .course__box__item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 1rem;
-  background: var(--background-skill-course);
-  width: 160px;
-  padding: 1rem;
-  border-radius: 10px;
-  transition: 300ms;
-}
-
-.course__box .course__box__item:hover{
-  scale: 1.08;
-}
-
-.course__box .course__box__item img {
-  max-width: 100%;
-  width: 35px;
-  height: auto;
-}
-
-.course__box .course__box__item h2 {
-  color: #fff;
-  font-size: 1rem;
-  font-weight: 500;
 }
 
 .services{
@@ -428,7 +449,7 @@ header nav .navlinks a svg {
 }
 
 .services__container .service__card{
-  background: #f1f1f1;
+  background: #fafafa;
   color: var(--color-secondary);
   padding: 1rem;
   max-width: 600px;
@@ -488,9 +509,11 @@ header nav .navlinks a svg {
 .service__card:hover .service__card__title{
   color: var(--color-primary);
 }
+
 .service__card:hover .service__card__title::after{
   background: var(--color-primary);
 }
+
 .service__card:hover .service__card__paragraph{
   color: var(--color-primary);
 }
@@ -519,6 +542,9 @@ header nav .navlinks a svg {
 }
 
 .projects{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   background: var(--background-projects);
   min-height: var(--min-height);
   width: 100%;
@@ -535,7 +561,7 @@ header nav .navlinks a svg {
 
 .projects .heading{
   position: relative;
-  color: var(--color-primary);
+  color: var(--color-secondary);
   font-family: var(--font-primary);
   font-size: 2rem;
   font-weight: 500;
@@ -550,7 +576,7 @@ header nav .navlinks a svg {
   width: 50%;
   transform: translate(-50%, 6px);
   height: 2px;
-  background: var(--color-primary);
+  background: var(--color-secondary);
   border-radius: 50px;
 }
 
@@ -558,7 +584,6 @@ header nav .navlinks a svg {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   flex-wrap: wrap;
   gap: 1rem;
   max-width: 75rem;
@@ -567,19 +592,12 @@ header nav .navlinks a svg {
 }
 
 .projects__cards .project__card{
-  display: flex;
   width: 100%;
-  max-width: 1050px;
+  max-width: 350px;
   background: var(--background-cards-projects);
-  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0),
-              inset 0 0 0 1px rgba(255, 255, 255, 0.085);
+  box-shadow: rgba(223, 223, 223, 0.1) 0 6px 12px -2px, rgba(0, 0, 0, 0.20) 0 3px 7px -3px;
   border-radius: 6px;
   transition: 300ms ease-in;
-}
-
-.project__card:hover{
-  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0),
-  inset 0 0 0 1px rgba(255, 255, 255, 0.25);
 }
 
 .project__image{
@@ -637,21 +655,6 @@ header nav .navlinks a svg {
   width: 10%;
 }
 
-.project__card__content .project__icons{
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: .5rem;
-  margin-top: 4px;
-  margin: 4px 0 10px 0;
-}
-
-.project__card__content .project__icons svg{
-  width: 20px;
-  height: 20px;
-  color: var(--color-project-icons);
-}
-
 .project__card__content .paragraph__card{
   font-size: 1rem;
   color: var(--color-paragraph-card);
@@ -671,21 +674,24 @@ header nav .navlinks a svg {
   padding: 1.5% 3%;
   border-radius: 4px;
   transition: 400ms ease-in-out;
+  position: relative;
 }
 
 .button__card::before{
   content: "";
   position: absolute;
-  bottom: -4px;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 2px;
-  background: #989898;
+  background: #202020;
   scale: 0;
   transition: 400ms ease-in-out;
 }
 .button__card:hover{
   background: transparent;
+  color: var(--color-secondary);
+  padding-right: 28px;
 }
 
 .button__card:hover::before{
@@ -702,8 +708,21 @@ header nav .navlinks a svg {
   height: 20px;
 }
 
+.button__card .arrow-right{
+  position: absolute;
+  right: 0;
+  opacity: 0;
+  visibility: hidden;
+  display: flex;
+}
+
+.button__card:hover .arrow-right{
+  opacity: 1;
+  visibility: visible;
+}
+
 .contact{
-  background: #202020;
+  background: #fbfbfb;
   padding: 5rem 0 7rem;
   font-family: var(--font-primary);
 }
@@ -711,7 +730,7 @@ header nav .navlinks a svg {
 .contact__heading{
   position: relative;
   text-align: center;
-  color: #fff;
+  color: #000;
   font-size: 2.15rem;
   font-weight: 500;
   margin: 0 0 3rem;
@@ -725,25 +744,24 @@ header nav .navlinks a svg {
   transform: translate(-50%, 4px);
   width: 5%;
   height: 2px;
-  background: #f5f5f5;
+  background: #000;
 }
 
 .contact .contact__wrapper{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  place-items: center;
-  grid-gap: 1rem;
-  max-width: 65rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  max-width: 55rem;
   margin: auto;
   padding: 1rem;
 }
 
 .contact__wrapper .contact__card{
   position: relative;
-  background: #f5f5f5;
-  margin: 0 20px;
-  padding: 1rem;
-  width: 200px;
+  margin: 0 20px 20px;
+  width: 100px;
   text-align: center;
   border-radius: 5px;
   transition: 300ms ease-in-out;
@@ -756,7 +774,7 @@ header nav .navlinks a svg {
   align-items: center;
   width: 70px;
   height: 70px;
-  border-radius: 6px;
+  border-radius: 50px;
   margin: auto;
   margin-bottom: 8px;
   position: relative;
@@ -764,20 +782,13 @@ header nav .navlinks a svg {
 }
 
 .contact__card__icon svg{
-  width: 50px;
-  height: 50px;
-  color: #fff;
+  width: 45px;
+  height: 45px;
+  color: #252525;
 }
 
-:is(.email-card, .whatsapp-card, .linkedin-card, .github-card)::after{
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 0;
-  border-radius: 5px;
-  transition: 400ms ease-in-out;
+.contact__card:hover svg{
+  color: #fff;
 }
 
 .email-card{
@@ -785,48 +796,51 @@ header nav .navlinks a svg {
 }
 
 .email{
-  background: #037a7a;
+  background: transparent;
+  border: 2px solid #1e3ca8;
+  transition: 400ms ease;
 }
 
-.email svg{
+.email.active{
+  background: #1e3ca8;
+}
+
+.email.active svg{
   color: #fff;
 }
 
+.contact__card:hover .email{
+  background: #1e3ca8;
+}
+
 .whatsapp{
+  background: transparent;
+  border: 2px solid #00bb2d;
+  transition: 400ms ease;
+}
+
+.contact__card:hover .whatsapp{
   background: #00bb2d;
 }
 
 .linkedin{
-  background: #0A66C2;
+  background: transparent;
+  border: 2px solid #0a66c2;
+  transition: 400ms ease;
+}
+
+.contact__card:hover .linkedin{
+  background: #0a66c2;
 }
 
 .github{
+  background: transparent;
+  border: 2px solid #171515;
+  transition: 400ms ease;
+}
+
+.contact__card:hover .github{
   background: #171515;
-}
-
-.email-card:hover::after{
-  background: #037a7a;
-  height: 100%;
-}
-
-.outlook-card:hover::after{
-  background: #0072c6;
-  height: 100%;
-}
-
-.whatsapp-card:hover::after{
-  background: #00bb2d;
-  height: 100%;
-}
-
-.linkedin-card:hover::after{
-  background: #0A66C2;
-  height: 100%;
-}
-
-.github-card:hover::after{
-  background: #171515;
-  height: 100%;
 }
 
 .contact__card .contact__card__title{
@@ -835,10 +849,6 @@ header nav .navlinks a svg {
   font-weight: 600;
   position: relative;
   z-index: 1;
-}
-
-.contact__card:hover .contact__card__title{
-  color: var(--color-primary);
 }
 
 footer {
@@ -856,19 +866,20 @@ footer p {
 
 .topo{
   position: fixed;
-  bottom: 15px;
-  right: 15px;
+  bottom: 20px;
+  right: 20px;
   color: var(--color-topo);
   font-family: var(--font-primary);
   font-size: 1rem;
   background: var(--background-topo);
-  padding: 4px 5px;
+  box-shadow: rgba(53, 53, 53, 0.350) 0 1px 3px 0, rgba(27, 31, 35, 0.15) 0 0 0 1px;
+  padding: 6px 6px;
   border-radius: 10px;
   border: none;
   outline: none;
   visibility: hidden;
   transform: translateY(100px);
-  transition: 500ms ease-in-out;
+  transition: 400ms ease;
   cursor: pointer;
   z-index: 1;
 }
@@ -888,95 +899,4 @@ footer p {
 .topo.mostrarTopo{
   visibility: visible;
   transform: translateY(0);
-}
-
-.modal{
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #fff;
-  overflow: hidden;
-  border-radius: 6px;
-  visibility: hidden;
-  opacity: 0;
-  transition: 300ms;
-  font-family: var(--font-primary);
-  width: 90%;
-  max-width: 500px;
-  padding: .25rem;
-}
-
-.modal.showModal{
-  visibility: visible;
-  opacity: 1;
-  transform: translate(-50%, -35%);
-}
-
-.modal__container{
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: 100;
-}
-
-.modal__container .overlay{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.607);
-  opacity: 0;
-  visibility: hidden;
-  transition: 300ms;
-}
-
-.overlay.showOverlay{
-  opacity: 1;
-  visibility: visible;
-}
-
-.modal .modal__header{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5px 10px;
-  border-bottom: 1px solid #d3d3d3;
-}
-
-.modal__header__title{
-  font-size: 1.25rem;
-  font-weight: 600;
-  text-align: center;
-}
-
-.modal__header .close{
-  cursor: pointer;
-  width: 28px;
-  height: 28px;
-  color: #000;
-}
-
-.modal__header .close:hover{
-  color: #505050;
-}
-
-.modal .modal__content{
-  padding: 1rem;
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.email-name{
-  margin: 0 0 10px;
-}
-
-.email-name svg{
-  width: 25px;
-  height: 25px;
-  vertical-align: middle;
 }
