--- a/assets/styles/media-queries.css
+++ b/assets/styles/media-queries.css
@@ -6,7 +6,7 @@
   }
 }
 
-@media screen and (max-width: 910px) {
+@media screen and (max-width: 920px) {
   .burger, .close-menu{
     display: block;
   }
@@ -56,13 +56,26 @@
     text-align: left;
   }
 
-  header nav .navlinks a {
+  header nav .navlinks .navlinks__link {
     position: relative;
     display: flex;
     gap: 0.5em;
     top: 20px;
     font-size: 18px;
     width: max-content;
+    color: var(--color-secondary);
+  }
+  header nav .navlinks .navlinks__link::before{
+    background: var(--color-secondary);
+  }
+  header nav .navlinks .close-menu{
+    color: var(--color-secondary);
+  }
+  header nav .btn__contact{
+    display: none;
+  }
+  header nav .navlinks .contact__menu{
+    display: block;
   }
 }
 
@@ -83,16 +96,6 @@
     gap: 2rem;
   }
 
-  .main-content {
-    max-width: 100%;
-  }
-
-  .imageBox img {
-    width: 320px;
-  }
-}
-
-@media screen and (max-width: 600px) {
   .container .main .socials {
     flex-direction: row;
     justify-content: center;
@@ -110,6 +113,12 @@
     justify-content: center;
   }
 
+  .imageBox img {
+    width: 320px;
+  }
+}
+
+@media screen and (max-width: 600px) {
   .imageBox img {
     width: 240px;
   }
@@ -152,6 +161,12 @@
 
   .about-content h2 {
     font-size: 2.45em;
+  }
+
+  .about-content h2::before{
+    left: 50%;
+    transform: translate(-50%);
+    width: 100px;
   }
 
   .about-image {
@@ -234,31 +249,6 @@
 /* == //SERVIÇOS == */
 
 /* == PROJETOS == */
-
-@media screen and (max-width: 992px){
-  .projects__cards{
-    flex-direction: row;
-  }
-  .projects__cards .project__card{
-    flex-wrap: wrap;
-    max-width: 380px;
-  }
-  .project__card .project__image{
-    max-width: 100%;
-  }
-  .project__card .project__card__content{
-    padding: 2% 3% 4%;
-  }
-}
-
-@media screen and (max-width: 620px){
-  .projects__cards{
-    flex-direction: column;
-  }
-  .projects__cards .project__card{
-    max-width: 400px;
-  }
-}
 
 /* == //PROJETOS == */
 
