--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -62,6 +62,7 @@ header nav .name{
   font-family: var(--font-play);
   font-weight: 400;
   font-size: 1.58rem;
+  z-index: -1;
 }
 
 header nav .navlinks {
@@ -101,7 +102,7 @@ header nav .navlinks a svg {
   height: 18px;
 }
 
-header nav .navlinks .contact__menu{
+header nav .navlinks .btn__contact__menu{
   display: none;
 }
 
@@ -114,11 +115,26 @@ header nav .btn__contact{
   font-family: var(--font-secondary);
   font-weight: 400;
   transition: 400ms ease;
+  
+  &:hover{
+    background: transparent;
+  }
 }
 
-header nav .btn__contact:hover{
-  background: transparent;
+header nav .navlinks .btn__contact__menu{
+  background: #069ecc;
+  border: 1px solid #069ecc;
+  padding: 5px 20px;
+  border-radius: 50px;
   color: var(--color-primary) !important;
+  font-family: var(--font-secondary);
+  font-weight: 400;
+  transition: 400ms ease;
+
+  &:hover{
+    background: transparent;
+    color: var(--color-secondary) !important;
+  }
 }
 
 .burger, .close-menu{
@@ -367,6 +383,7 @@ header nav .btn__contact:hover{
 .skill__wrapper{
   font-family: var(--font-play);
   text-align: center;
+  margin: 1rem 0;
 }
 
 .skill__wrapper .skill__inner{
@@ -664,7 +681,6 @@ header nav .btn__contact:hover{
 .button__card{
   display: flex;
   align-items: center;
-  gap: .35rem;
   position: relative;
   width: max-content;
   font-size: 1rem;
@@ -688,10 +704,10 @@ header nav .btn__contact:hover{
   scale: 0;
   transition: 400ms ease-in-out;
 }
+
 .button__card:hover{
   background: transparent;
   color: var(--color-secondary);
-  padding-right: 28px;
 }
 
 .button__card:hover::before{
@@ -701,24 +717,6 @@ header nav .btn__contact:hover{
 .button__card span{
   font-size: 1rem;
   font-weight: 400;
-}
-
-.button__card svg{
-  width: 20px;
-  height: 20px;
-}
-
-.button__card .arrow-right{
-  position: absolute;
-  right: 0;
-  opacity: 0;
-  visibility: hidden;
-  display: flex;
-}
-
-.button__card:hover .arrow-right{
-  opacity: 1;
-  visibility: visible;
 }
 
 .contact{
