--- a/assets/styles/media-queries.css
+++ b/assets/styles/media-queries.css
@@ -1,4 +1,18 @@
-/* == HEADER E MENU == */
+/* == NAVBAR & MENU == */
+
+/* @media screen and (max-width: 1024px) {
+  header nav .navlinks{
+    flex: auto;
+    flex-grow: 2;
+    flex-basis: 10%;
+  }
+} */
+/* 
+@media screen and (max-width: 960px) {
+  header nav .navlinks{
+    flex-basis: 20%;
+  }
+} */
 
 @media screen and (max-width: 600px) {
   header {
@@ -6,11 +20,10 @@
   }
 }
 
-@media screen and (max-width: 920px) {
+@media screen and (max-width: 870px) {
   .burger, .close-menu{
     display: block;
   }
-  
 
   .burger.active{
     opacity: 0;
@@ -23,11 +36,12 @@
   }
   
   .close-menu svg{
+    color: var(--color-burger);
     transition: 300ms;
-  }
 
-  .close-menu svg:hover{
-    color: #909090;
+    &:hover{
+      color: #909090;
+    }
   }
 
   .menu {
@@ -42,10 +56,30 @@
     padding: 50px 10px;
     overflow: hidden;
     transition: 500ms cubic-bezier(0, 0, .2, 1);
+    z-index: 10;
   }
 
   .menu.active{
     right: 0;
+  }
+
+  .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.75);
+    visibility: hidden;
+    opacity: 0;
+    z-index: 1;
+    transition: 300ms cubic-bezier(.25, .46, .45, .94);
+  }
+  
+  .overlay.active{
+    visibility: visible;
+    opacity: 1;
+    display: block;
   }
 
   header nav .navlinks {
@@ -64,27 +98,46 @@
     top: 20px;
     font-size: 18px;
     width: max-content;
-    color: var(--color-secondary);
+    color: var(--color-navlinks);
   }
+
   header nav .navlinks .navlinks__link::before{
-    background: var(--color-secondary);
+    background: var(--color-navlinks-border);
   }
+
   header nav .navlinks .close-menu{
     color: var(--color-secondary);
   }
+
   header nav .btn__contact{
     display: none;
   }
-  header nav .navlinks .btn__contact__menu{
+
+  header nav .navlinks .btn__contact__list{
     display: block;
     margin-top: 15px;
   }
+
+  header nav .navbar__right{
+    flex-direction: row-reverse;
+    gap: 1.5rem;
+    right: 0;
+  }
+
+  header nav .btn__contact__list .btn__contact__menu{
+    display: flex;
+    align-items: center;
+  }
+
+  .darkmode__btn{
+    margin-right: 1rem;
+  }
 }
 
-/* == //HEADER E MENU == */
+/* == //NAVBAR & MENU == */
 
 
-/* == PRINCIPAL == */
+/* == APRESENTAÇÃO == */
 @media screen and (max-width: 1090px) {
   .container .main {
     padding: 20px;
@@ -101,10 +154,12 @@
   .container .main .socials {
     flex-direction: row;
     justify-content: center;
+    gap: 1.5rem;
   }
 
   .main-content {
     text-align: center;
+    margin-bottom: 1rem;
   }
 
   .main-content h2 {
@@ -138,7 +193,7 @@
   }
 }
 
-/* == //PRINCIPAL == */
+/* == //APRESENTAÇÃO == */
 
 
 /* == SOBRE MIM == */
@@ -157,7 +212,6 @@
   }
 
   .about-content {
-    text-align: center;
     margin: 0;
   }
 
@@ -199,63 +253,30 @@
 /* == HABILIDADES == */
 
 @media screen and (max-width: 830px){
+  .skills{
+    padding: 2rem 10px 30px;
+  }
   .skills .skills__container{
     flex-direction: column;
     align-items: center;
   }
 }
 
-@media screen and (max-width: 450px){
-  .skill__wrapper .skill__inner{
-    flex-wrap: wrap;
-  }
-}
-
 /* == //HABILIDADES == */
 
-/* == SERVIÇOS == */
-
-@media screen and (max-width: 768px){
-  .services .services__container{
-    flex-direction: column;
-  }
-
-  .service__card .service__card__icon{
-    margin: 0 auto;
-  }
-
-  .service__card .service__card__content{
-    text-align: center;
-  }
-
-  .service__card__title::before{
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%, 3px);
-    width: 50px;
-    height: 2px;
-    background: #0073c6e0;
-  }
-
-  .service__card__title::after{
-    display: none;
-  }
-  
-  .service__card:hover .service__card__title::before{
-    background: var(--color-primary);
-  }
-}
-
-/* == //SERVIÇOS == */
 
 /* == PROJETOS == */
+
+@media screen and (max-width: 680px) {
+  .carousel-arrows{
+    display: none;
+  }
+}
 
 /* == //PROJETOS == */
 
 
-/* == EMAILS NO MODAL == */
+/* == CONTEÚDO DO MODAL == */
 
 @media screen and (max-width: 992px){
   .email-name{
@@ -272,4 +293,4 @@
   }
 }
 
-/* == //EMAILS NO MODAL == */
+/* == //CONTEÚDO DO MODAL == */
