--- a/assets/styles/modal.css
+++ b/assets/styles/modal.css
@@ -3,7 +3,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -35%);
-    background: #fff;
+    background: var(--background-modal);
     overflow: hidden;
     border-radius: 6px;
     visibility: hidden;
@@ -28,19 +28,19 @@
     z-index: 100;
   }
   
-  .modal__container .overlay{
+  .modal__container .overlay__modal{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.607);
+    background: rgba(0, 0, 0, 0.707);
     opacity: 0;
     visibility: hidden;
     transition: 300ms;
   }
   
-  .overlay.showOverlay{
+  .overlay__modal.showOverlay{
     opacity: 1;
     visibility: visible;
   }
@@ -50,24 +50,25 @@
     justify-content: space-between;
     align-items: center;
     padding: 5px 10px;
-    border-bottom: 1px solid #d3d3d3;
+    border-bottom: 1px solid var(--color-border-header-modal);
   }
   
   .modal__header__title{
     font-size: 1.25rem;
     font-weight: 600;
     text-align: center;
+    color: var(--color-title-modal);
   }
   
   .modal__header .close{
     cursor: pointer;
     width: 28px;
     height: 28px;
-    color: #000;
-  }
-  
-  .modal__header .close:hover{
-    color: #505050;
+    color: var(--color-icon-modal);
+
+    &:hover{
+      color: var(--color-icon-hover);
+    }
   }
   
   .modal .modal__content{
@@ -77,14 +78,38 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 1rem;
   }
   
   .email-name{
+    display: flex;
+    gap: .5rem;
     margin: 0 0 10px;
+    color: var(--color-email-name-modal);
   }
   
   .email-name svg{
-    width: 25px;
-    height: 25px;
+    width: 28px;
+    height: 28px;
     vertical-align: middle;
+  }
+
+  .google-icon-color{
+    fill: var(--google-icon-color);
+  }
+
+  .google-icon-color-two{
+    fill: var(--google-icon-color-two);
+  }
+
+  .google-icon-color-tree{
+    fill: var(--google-icon-color-tree);
+  }
+
+  .google-icon-color-four{
+    fill: var(--google-icon-color-four);
+  }
+
+  .outlook-icon-color{
+    fill: var(--outlook-icon-color);
   }
